--- a/django_greeting/greetings/templates/greetings/home.html
+++ b/django_greeting/greetings/templates/greetings/home.html
@@ -4,7 +4,7 @@
     <title>Home Page</title>
     <style>
         body {
-            background-color: lightblue;
+            background-color: white;
             font-family: Arial;
             text-align: center;
             padding: 50px;
@@ -20,6 +20,7 @@
 </head>
 <body>
     <h2>Welcome to My Greeting Website</h2>
+    <p>This is a simple greeting website</p>
     <p>Type your name in the URL to see the greeting</p>
     <br>
     <br><br>
