--- a/django_greeting/greetings/templates/greetings/greeting.html
+++ b/django_greeting/greetings/templates/greetings/greeting.html
@@ -4,7 +4,7 @@
     <title>Greeting Page</title>
     <style>
         body {
-            background-color: lightyellow;
+            background-color: white;
             font-family: Arial;
             text-align: center;
             padding: 50px;
