--- a/django_greeting/greetings/templates/greetings/greeting.html
+++ b/django_greeting/greetings/templates/greetings/greeting.html
@@ -10,10 +10,13 @@
             padding: 50px;
         }
         h1 {
-            color: green;
+            color: black;
+        }
+        p {
+            color: black;
         }
         a {
-            color: blue;
+            color: black;
             font-size: 16px;
         }
     </style>
