--- a/django_greeting/greetings/templates/greetings/home.html
+++ b/django_greeting/greetings/templates/greetings/home.html
@@ -10,20 +10,23 @@
             padding: 50px;
         }
         h2 {
-            color: navy;
+            color: black;
+        }
+        p {
+            color: black;
         }
         a {
-            color: red;
+            color: black;
             font-size: 18px;
         }
     </style>
 </head>
 <body>
     <h2>Welcome to My Greeting Website</h2>
-    <p>This is a simple greeting website</p>
     <p>Type your name in the URL to see the greeting</p>
     <br>
-    <br><br>
     <a href="/greet/JOORY/">Example: Greeting for JOORY</a>
+    <br><br>
+    
 </body>
 </html>
